--- a/ProjectDAW.csproj
+++ b/ProjectDAW.csproj
@@ -127,19 +127,23 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202011221334212_Initial.cs" />
-    <Compile Include="Migrations\202011221334212_Initial.designer.cs">
-      <DependentUpon>202011221334212_Initial.cs</DependentUpon>
+    <Compile Include="Migrations\202011221551297_Initial.cs" />
+    <Compile Include="Migrations\202011221551297_Initial.designer.cs">
+      <DependentUpon>202011221551297_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppDbContext.cs" />
     <Compile Include="Models\TblCategory.cs" />
+    <Compile Include="Models\TblComment.cs" />
+    <Compile Include="Models\TblPost.cs" />
     <Compile Include="Models\TblUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Category.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\AppDataBase.mdf" />
@@ -181,10 +185,11 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Category\Show.cshtml" />
+    <Content Include="Views\Category\Edit.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -199,8 +204,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202011221334212_Initial.resx">
-      <DependentUpon>202011221334212_Initial.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011221551297_Initial.resx">
+      <DependentUpon>202011221551297_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
