--- a/ProjectDAW.csproj
+++ b/ProjectDAW.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Models\TblUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Category.cs" />
+    <Compile Include="ViewModels\Post.cs" />
     <Compile Include="ViewModels\PostListItem.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -194,10 +195,10 @@
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Category\Show.cshtml" />
     <Content Include="Views\Category\Edit.cshtml" />
+    <Content Include="Views\Post\Show.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\Post\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
