--- a/ProjectDAW.csproj
+++ b/ProjectDAW.csproj
@@ -202,6 +202,7 @@
     <Content Include="Views\Post\Show.cshtml" />
     <Content Include="Views\Post\Edit.cshtml" />
     <Content Include="Views\Shared\_TempDataDismissableAlert.cshtml" />
+    <Content Include="Views\Category\_CategoryPanelHeadBody.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
